--- a/my-turbo-app/package.json
+++ b/my-turbo-app/package.json
@@ -1,6 +1,10 @@
 {
   "name": "my-turbo-app",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
