--- a/my-turbo-app/packages/ui/package.json
+++ b/my-turbo-app/packages/ui/package.json
@@ -2,6 +2,8 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "exports": {
     "./*": "./src/*.tsx"
   },
@@ -13,6 +15,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@storybook/react": "^9.0.15",
     "@turbo/gen": "^2.5.0",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
