--- a/my-turbo-app/packages/ui/tsconfig.json
+++ b/my-turbo-app/packages/ui/tsconfig.json
@@ -1,8 +1,24 @@
+// {
+//   "extends": "@repo/typescript-config/react-library.json",
+//   "compilerOptions": {
+//     "outDir": "dist"
+//   },
+//   "include": ["src"],
+//   "exclude": ["node_modules", "dist"]
+// }
 {
-  "extends": "@repo/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "target": "esnext",
+    "module": "esnext",
+    "jsx": "react-jsx",
+    "declaration": true,
+    "declarationMap": true,
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "types": ["@storybook/react"]
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src", "types"]
 }
